chore(member): remove local exception handler